--- a/Frontend/paginas/index.html
+++ b/Frontend/paginas/index.html
@@ -22,6 +22,7 @@
       <a href="menu.html">Burgers</a>
       <a href="nosotros.html">¿Quienes somos?</a>
       <a href="restaurantes.html">Restaurantes</a>
+      <a href="foodtruck.html">Restaurantes</a>
     </nav>
     <div class="header-right">
       <i class="fas fa-search search-icon"></i>
