--- a/Frontend/paginas/index.html
+++ b/Frontend/paginas/index.html
@@ -20,9 +20,10 @@
     <nav class="nav-links">
       <a href="index.html" class="active">Home</a>
       <a href="menu.html">Burgers</a>
+      <a href="foodtruck.html">FoodTruck</a>
       <a href="nosotros.html">¿Quienes somos?</a>
       <a href="restaurantes.html">Restaurantes</a>
-      <a href="foodtruck.html">Restaurantes</a>
+      
     </nav>
     <div class="header-right">
       <i class="fas fa-search search-icon"></i>
