--- a/Frontend/paginas/foodtruck.html
+++ b/Frontend/paginas/foodtruck.html
@@ -32,30 +32,50 @@
     </div>
   </header>
 
-  <!-- ✅ CONTENIDO PRINCIPAL -->
+  <!-- ✅ CONTENIDO -->
   <main class="contenido">
-    <section class="main-section">
-      <div class="main-left">
-        <h1 class="main-heading">¡LA TENTACIÓN RUEDA!</h1>
-        <p class="main-subheading">
-          Nuestro FoodTruck GULA recorre las calles llevando el pecado más sabroso a ferias, eventos y festivales.
-          Donde huele a hamburguesa, ahí estamos. Plancha ardiente, burgers diabólicas... y tú, cayendo en la tentación.
-        </p>
-        <p style="margin-top: 1rem;">
-          La GULA móvil no necesita asientos, sólo fuego, carne y almas hambrientas. Y sí... el 2025 viene cargado.
-        </p>
-        <p style="margin-top: 1rem;">
-          <strong>DOS UNIDADES INFERNALES</strong> listas para aparecer donde menos te lo esperes.
-        </p>
-      </div>
-      <div class="main-right">
-        <img src="../Imagenes/foodtruck.webp" alt="FoodTruck GULA" class="burger-image" />
-      </div>
+
+    <!-- 1. Imagen principal de la FoodTruck -->
+    <section style="text-align: center; margin-top: 7rem;">
+      <img src="../Imagenes/caravana.webp" alt="FoodTruck GULA" style="max-width: 1000px; width: 60%; border-radius: 20px;" />
     </section>
 
-    <section style="text-align: center; margin-top: 3rem;">
-      <img src="../Imagenes/ilustracion-gula.png" alt="Ilustración diabólica Gula" style="max-width: 500px; width: 100%;" />
+    <!-- 2. Primer bloque de texto (infernal) -->
+    <section style="margin-top: 3rem; text-align: center;">
+      <h1 class="main-heading">THE TEMPTATION HITS THE STREETS</h1>
+      <p class="main-subheading" style="margin-top: 1rem;">
+        🔥 <strong>THE BEASTS OF GULA ARE UNLEASHED</strong> 🔥
+      </p>
+      <p style="margin-top: 0.5rem;">
+        Our GULA FoodTrucks are hell-powered machines, made to ignite grills and awaken forbidden cravings. 
+        No seats, no mercy — just pure sin on a bun.
+      </p>
+      <p style="margin-top: 1rem;">
+        <strong>TWO DEMONIC TRUCKS</strong> travel the country ready to appear where hunger burns hottest.
+        When desire is on wheels... will you resist, or surrender?
+      </p>
     </section>
+
+    <!-- 3. Imagen de las personas -->
+    <section style="text-align: center; margin-top: 3rem;">
+      <img src="../Imagenes/devil_floating.apng" alt="Ilustración diabólica Gula" style="max-width: 400px; width: 200%; border-radius: 15px;" />
+    </section>
+
+    <!-- 4. Segundo bloque de texto (informativo) -->
+    <section style="margin: 3rem auto; max-width: 800px; text-align: center;">
+      <p>
+        The GULA FoodTruck tours festivals, street markets and wild events bringing flame-grilled sin wherever it goes. 
+        Our planchas don't cool down, and neither does your craving.
+      </p>
+      <p style="margin-top: 1rem;">
+        It doesn’t need seats — only fire, beef and hungry souls. 
+        With smoke and seduction, we’re already heating up the roads for 2025.
+      </p>
+      <p style="margin-top: 1rem;">
+        <strong>TWO MOBILE UNITS OF TEMPTATION</strong> ready to appear wherever burgers are needed most.
+      </p>
+    </section>
+
   </main>
 </body>
 </html>
