--- a/Frontend/paginas/foodtruck.html
+++ b/Frontend/paginas/foodtruck.html
@@ -65,7 +65,7 @@
   <footer class="footer-gula">
     <div class="footer-content">
       <p>🔥 Sabor que enciende tus pecados. Hecho con pasión por <strong>GULA</strong> 🍔</p>
-      <a href="https://www.instagram.com/tu_usuario" target="_blank" class="instagram-btn" title="Síguenos en Instagram">
+      <a href="https://www.instagram.com/gulabvrgers/" target="_blank" class="instagram-btn" title="Síguenos en Instagram">
         <i class="fab fa-instagram"></i>
       </a>
     </div>
